# stray-animal-rescue-platform

./: .env.example  .gitignore  LICENSE  Makefile  README.en.md  README.md  db.sqlite3  manage.py  pyproject.toml
agent-docs/: AGENTS.md  admin.md  async-tasks.md  authentication.md  database.md  django-development.md  engineering-quality.md  logging.md  template-and-style.md
apps/: __init__.py
apps/accounts/: admin.py  admin_forms.py  apps.py  backends.py  forms.py  models.py  providers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/activities/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/adoptions/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/animals/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/campuses/: admin.py  apps.py  models.py
apps/core/: context_processors.py  middleware.py  validators.py  views.py
apps/donations/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/faqs/: admin.py  apps.py  models.py
apps/posters/: admin.py  (+2 more)
base_framework/: __init__.py  asgi.py  logging.py  urls.py  wsgi.py
celery_app/: celery.py
db/: activities.sql  adoptions.sql  animals.sql  campuses.sql  donations.sql  faqs.sql  notifications.sql  posters.sql  tags.sql  user.sql  volunteers.sql
deploy/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml
docs/: UI重构分批计划.md  上线配置说明.md  系统启用说明.md  需求概要-ui部分.md  需求概要.md
home-style/: tech-spec.md
skill/: SKILL.md
tests/: test_accounts.py  test_admin.py  test_adoptions.py  test_animals.py  test_content_home.py  test_donations_activities.py  test_health.py  test_logging.py  test_platform_foundation.py  test_tasks.py  test_volunteers.py
(+172 files in other folders)
