[project]
name = "djangoharness"
version = "0.1.0"
description = "A Django scaffold designed for consistent AI-assisted development."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "celery>=5.3,<6.0",
    "django>=4.2,<5.0",
    "django-simpleui>=2024.8",
    "gunicorn>=22.0,<24.0",
    "loguru>=0.7,<1.0",
    "mysqlclient>=2.2,<3.0",
    "pillow>=10.0,<13.0",
    "python-dotenv>=1.0,<2.0",
    "redis>=5.0,<6.0",
]

[dependency-groups]
dev = [
    "django-stubs>=5.0,<6.0",
    "mdformat>=0.7,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-django>=4.8,<5.0",
    "ruff>=0.11,<1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["migrations", "staticfiles"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"base_framework/settings/dev.py" = ["F403", "F405"]
"base_framework/settings/prod.py" = ["F403", "F405"]
"base_framework/settings/base.py" = ["E402", "F403"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "base_framework.settings.dev"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["migrations", "staticfiles"]

[tool.django-stubs]
django_settings_module = "base_framework.settings.dev"

[tool.mdformat]
wrap = 88
number = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "base_framework", "celery_app"]
